Fix whitespace and H1 underline styling

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -63,7 +63,7 @@
 ================================================== */
   h1 { font-size: 42px; line-height: 50px; margin-bottom: 14px;}
   h2 { font-size: 28px; line-height: 40px; margin-top:20px; margin-bottom: 10px; }
-  h3 { font-size: 20px; line-height: 34px; margin-top:24px; margin-bottom: 3px; }
+  h3 { font-size: 20px; line-height: 38px; margin-top:36px; margin-bottom: 3px; }
   h4 { font-size: 16px; line-height: 20px; margin-bottom: 4px; }
   h5 { font-size: 13px; line-height: 18px; }
   h6 { font-size: 13px; line-height: 16px; }
@@ -80,13 +80,16 @@
     font-weight: 700;
     text-shadow: 0 1px rgba(255, 255, 255, .75);
     text-transform: uppercase;
+    border-bottom:2px solid #ddd;
   }
+
   h3 {
     color: #444;
     font-family: "Josefin Slab", sans-serif;
     font-weight: bold;
     text-transform: uppercase;
   }
+
   h3.resume {
     /*background-color: #fff;*/
     /*padding: 2px 4px;*/
